# he-path-of-the-samurai

./: .env  ARCHITECTURE.md  PROJECT_STRUCTURE.md  Readme.md  demo.sh  docker-compose.yml
.claude/: settings.local.json
db/: init.sql  postgresql.conf  schema.sql
services/php-web/laravel-patches/app/Http/Controllers/: AstroController.php  TelemetryController.php
services/php-web/laravel-patches/resources/views/: dashboard.blade.php
services/php-web/laravel-patches/routes/: web.php
services/rust-iss/: Cargo.toml  Dockerfile
services/rust-iss/src/: lib.rs  main.rs
services/rust-iss/src/clients/: iss_client.rs  mod.rs  nasa_client.rs  spacex_client.rs
services/rust-iss/src/config/: mod.rs
services/rust-iss/src/domain/: iss.rs  mod.rs  osdr.rs  space.rs
services/rust-iss/src/errors/: api_error.rs  mod.rs
services/rust-iss/src/handlers/: health.rs  iss_handler.rs  mod.rs  osdr_handler.rs  space_handler.rs
services/rust-iss/src/middleware/: error_handler.rs  mod.rs  rate_limit.rs
services/rust-iss/src/repo/: iss_repo.rs  mod.rs  osdr_repo.rs  space_repo.rs
services/rust-iss/src/routes/: mod.rs
services/rust-iss/src/services/: iss_service.rs  mod.rs  nasa_service.rs  scheduler.rs
services/telemetry-generator/: Cargo.toml  Dockerfile
services/telemetry-generator/src/: main.rs
